# PatchSorter

./: .gitignore  PS.py  PS_api.py  PS_api_image.py  PS_api_image_search.py  PS_api_patch.py  PS_api_project.py  PS_api_project_helper.py  PS_pool.py  PatchSorter_run  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
PatchSorter/: PS_api.py  PS_api_image.py  PS_api_image_helper.py  PS_api_image_search.py  PS_api_image_upload.py  PS_api_patch.py  PS_api_patch_helper.py  PS_api_project.py  PS_api_project_helper.py  PS_config.py  PS_db.py  PS_html.py  PS_pool.py  PS_searchtree_store.py  PS_utils.py  PS_worker.py
PatchSorter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PatchSorter/utils/: pytable_surgury.py  train_dl_supervised.py
approaches/barlowtwins/: train_dl_barlowtwins.py
approaches/image_search/: image_search_feature_vector.py
approaches/make_patches/: make_patch_database.py
config/: config.ini  logging.ini
cuda_10/: Dockerfile  requirements.txt
cuda_11/: Dockerfile  requirements.txt
devcode/: linspace_test_grid_patchsorter.py
manuscript_modifications/: README.md  nuclei_data_set_generation_script.py  time_analysis.py  view_embed_plot.js  view_patchgrid_plot.js
patchsorter/: __init__.py  __main__.py  db.py  html.py  pool.py  searchtree_store.py  utils.py  worker.py
templates/: embed.html  help.html  image_output.html  image_view.html  images.html  index.html  view_embed_plot.js
utils/: ps-cli-example.py
wiki/: Frequently-Asked-Questions.md  Home.md  PatchSorter-Pages.md  User-Guide.md
(+55 files in other folders)
