[metadata]
name = patchsorter
url = https://github.com/choosehappy/PatchSorter
download_url = https://github.com/choosehappy/PatchSorter
license = BSD
license_file = LICENSE.txt
description = PatchSorter is an open-source digital pathology tool for histologic object labeling.
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Andrew Janowczyk
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Digital Pathology
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages =
    patchsorter
python_requires = >=3.7
install_requires =
    torch==1.8.2
    numpy==1.20.3
    Flask-SQLAlchemy==2.4.4
    scikit-image==0.18.1
    scikit-learn==0.24.0
    opencv-python-headless==4.5.3.56
    Flask-Restless==0.17.0
    Flask==1.1.2

[options.entry_points]
console_scripts =
    run_module = patchsorter.__main__:main